--- a/public/scss/components/_common.scss
+++ b/public/scss/components/_common.scss
@@ -76,6 +76,11 @@
             border-bottom: 2px solid rgba(56, 77, 95, 0.58);
         }
     }
+    &.mobileSideBar{
+        @include breakpoint(small){
+            width: 100%;
+        }
+    }
 }
 .leftSidebar{
     width: 270px;
@@ -87,6 +92,7 @@
     @include breakpoint(small){
         display: none;
     }
+    
     .menu{
         li{
             &.active{
