--- a/public/scss/pages/_help.scss
+++ b/public/scss/pages/_help.scss
@@ -31,11 +31,23 @@
         width: calc(100% - 185px);
         padding-left: 120px;
         padding-right: 20px;
+        @include breakpoint(large){
+            padding-left: 10px;
+            padding-right: 0;
+        }
+        @include breakpoint(xmedium){
+            width: 100%;
+            padding-top: 40px;
+            padding-right: 5px;
+        }
         .wrap{
             width: 483px;
             margin: 0 auto 0 0;
+            @include breakpoint(xmedium){
+                width: 100%;
+            }
         }
-        h5{
+        h1{
             font-weight: 600;
             font-family: $font-family-PlusSemiBold;
             font-size: 20px;
@@ -300,6 +312,9 @@
             align-items: center;
             width: 100%;
             margin-bottom: 65px;
+            @include breakpoint(large){
+                margin-bottom: 25px;
+            }
             li{ 
                 color: rgba(146, 156, 164, 1);
                 font-size: 14px;
@@ -339,6 +354,9 @@
         }
         .left_col{
             padding-left: 248px;
+            @include breakpoint(large){
+                padding-left: 15px;
+            }
         }
         .searchResults{
             padding: 16px;
@@ -413,5 +431,264 @@
             margin-top: 30px;
             padding: 10px 30px;
         }
+    }
+}
+
+// desktop help section
+.desktopHelp{
+    @include breakpoint(small){
+        display: none;
+    }
+}
+
+// mobile help section
+.mobileMainWrap{
+    height: 100vh;
+    background: #131f2c;
+}
+.mobileHelp{
+    display: none;
+    background: rgba(25, 31, 40, 0.05);
+    width: 100%;
+    padding: 7px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    backdrop-filter: blur(4.5px);
+    flex-direction: column;
+    justify-content: flex-end;
+    @include breakpoint(small){
+        display: flex;
+    }
+    .left_col{
+        padding-left: 0;
+        padding-top: 25px;
+    }
+    .mobileClose{
+        padding: 10px;
+        background: transparent;
+        display: flex;
+        width: 78px;
+        height: 78px;
+        border-radius: 50%;
+        margin: 0 auto -30px;
+        position: relative;
+        z-index: 9;
+        background: rgba(25, 31, 40, 0.05);
+        figure{
+            background: rgb(38 52 61);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: 100%;
+            height: 100%;
+            border-radius: 50%;
+            img{
+                width: auto;
+            }
+        }
+    }
+    .help-section{
+        width: 100%;
+        padding: 50px 9px 26px 9px;
+        background-image: linear-gradient(to top, #191f2b, #1e2732, #232f3a, #293841, #304048, #314249, #33434b, #34454c, #304048, #2c3b43, #28373f, #24323b);
+        border-radius: 40px;
+        .genaiguruSelect{
+            margin: 0 auto;
+            background: linear-gradient(87.97deg, #B03FCC 2.88%, #683FE4 25.56%, rgba(216, 63, 190, 0.94) 114.56%), linear-gradient(0deg, rgba(255, 255, 255, 0.21), rgba(255, 255, 255, 0.21));
+            border: 1px solid rgba(255, 255, 255, 0.21);
+            box-shadow: 0px 10px 24px 0px rgba(58, 74, 99, 0.63);
+        }
+        h5{
+            text-align: center;
+        }
+    }
+    .lightText{
+        display: flex;
+        margin-bottom: 0;
+        figure{
+            width: 28px;
+        }
+        p{
+            font-size: 12px;
+            width: calc(100% - 28px);
+            padding-left: 8px;
+            color: rgba(95, 113, 128, 1);
+        }
+    }
+    .textBox{
+        margin-top: 24px;
+        a{
+            border: 1px solid rgba(67, 83, 99, 1);
+            box-shadow: 0px 4px 14px 0px rgba(60, 71, 101, 0.13);
+            padding: 8px 15px;
+            color: rgba(214, 212, 212, 1);
+            margin-left: 35px;
+            width: calc(100% - 35px);
+        }
+        p{
+            &:last-of-type{
+                a{
+                    margin-bottom: 0;
+                }
+            }
+        }
+    }
+    .wrapperSearchs{
+        margin-bottom: 0;
+        margin-top: 15px;
+    }
+    .userSearch {
+        p{
+            font-size: 12px;
+            padding: 10px;
+            width: calc(100% - 46px);
+            font-weight: 400;
+        }
+    }
+    .searchResults{
+        &.innerSearchResult{
+            margin-top: 17px;
+            padding: 13px;
+            margin-left: 33px;
+            width: calc(100% - 33px);
+            h5{
+                font-size: 12px;
+                color: rgba(255, 255, 255, 1);
+                font-weight: 400;
+            }
+            .headings{
+                margin-bottom: 19px;
+            }
+            .boxes{
+                padding: 12px 30px 12px 16px;
+                h6{
+                    font-size: 14px;
+                    margin-bottom: 4px;
+                }
+                .dateTime{
+                    margin-bottom: 8px;
+                }
+            }
+            .videoBoxes{
+                padding: 12px;
+                figure{
+                    width: 72px;
+                    height: 72px;
+                }
+                .content{
+                    width: calc(100% - 72px);
+                    padding-left: 10px;
+                    p{
+                        font-size: 14px;
+                        margin-bottom: 4px;
+                        a{
+                            font-size: 14px;
+                        }
+                    }
+                    ul{
+                        margin-bottom: 5px;
+                        li{
+                            font-size: 10px;
+                        }
+                    }
+                    .tags{
+                        font-size: 10px;
+                        margin-bottom: 0;
+                    }
+                }
+            }
+        }
+    }
+}
+
+// mobile write post
+.desktopPostCreate{
+    @include breakpoint(small){
+        display: none;
+    }
+}
+.mobilePost{
+    display: none;
+    background-image: linear-gradient(to top, #191f2b, #1e2732, #232f3a, #293841, #304048, #314249, #33434b, #34454c, #304048, #2c3b43, #28373f, #24323b);
+    width: 100%;
+    width: 100%;
+    height: 100%;
+    flex-wrap: wrap;
+    @include breakpoint(small){
+        display: block;
+    }  
+    .postHead{
+        width: 100%;
+        padding: 20px 16px;
+        background: linear-gradient(10deg, rgba(0, 0, 0, 0.2) 0%, rgba(0, 0, 0, 0) 100%);
+        height: auto;
+        .col_left{
+            width: calc(100% - 80px);
+            padding-right: 10px;
+            align-items: center;
+            p{
+                font-size: 20px;
+                color: $color-white;
+                font-weight: 500;
+                font-family: $font-family-PlusMedium;
+            }
+        }
+        .col_right{
+            width: 80px;
+        }
+        .loginBtn{
+            padding: 9.5px 19px;
+            border-radius: 32px;
+        }
+        .backBtns{
+            width: 48px;
+            height: 48px;
+            border-radius: 50%;
+            background: rgba(124, 141, 184, 0.1);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin-right: 17px;
+            i{
+                color: $color-white;
+                font-size: 26px;
+            }
+        }
+    }
+    .help-section.writePost{
+        padding-top: 25px;
+        .videoShow{
+            figure{
+                width: 170px;
+                height: 110px;
+            }
+        }
+    }
+    .searchResults{
+        margin-top: 0 !important;
+    }
+    h1{
+        font-size: 20px;
+        line-height: 1.4em;
+        margin-bottom: 42px;
+        color: rgba(251, 249, 255, 1);
+    }
+    .wrap{
+        padding: 0 16px;
+    }
+    .wrapperSearchs{
+        margin-top: 80px;
+    }
+    .createPostForm{
+        .textarea{
+            word-break: break-all;
+        }
+    }
+    .imageIcons{
+        text-align: right;
+        margin-top: 5px !important;
     }
 }
