--- a/public/scss/pages/_home.scss
+++ b/public/scss/pages/_home.scss
@@ -8,6 +8,11 @@
             width: 100%;
             padding: 19px 0 20px 16px;
         }
+        &.innerRight{
+            @include breakpoint(large){
+                padding: 20px 20px 20px 15px;
+            }
+        }
     }
     .blog-wrap{
         h3{
