--- a/public/app/css/style.css
+++ b/public/app/css/style.css
@@ -1889,9 +1889,12 @@ width: auto;
 }
 
 .interestSection {
-padding: 160px 15px 70px;
+padding: 0px 15px 70px;
 height: 100%;
 }
+section.interestSection.second.mainBg figure.headerLogo {
+  padding-bottom: 80px  ;
+} 
 
 @media (min-width: 1550px) and (max-width: 1980px) {
 .interestSection {
@@ -1943,8 +1946,8 @@ top: 0;
 }
 
 .interestSection .cancelBtn a {
-width: 48px;
-height: 48px;
+width: 40px;
+height: 40px;
 border-radius: 50%;
 background: rgba(124, 141, 184, 0.27);
 display: flex;
@@ -1978,7 +1981,7 @@ background: #873dd0;
 
 .interestSection .cancelBtn a i {
 color: #fff;
-font-size: 24px;
+font-size: 18px;
 }
 
 .interestSection h1,
@@ -2027,6 +2030,7 @@ line-height: 1.45em;
 margin-top: 65px;
 display: flex;
 flex-wrap: wrap;
+justify-content: center;
 }
 
 @media (max-width: 576px) {
