--- a/public/app/css/newStyle.css
+++ b/public/app/css/newStyle.css
@@ -1,13 +1,37 @@
 /* new css */
+/* Alert Popup css */
+.custom-toast {
+  background-color: #3498db;
+  color: #fff;
+  font-size: 16px;
+  border-radius: 10px;
 
-/* Updated CSS for Popup and background Akshay*/
+}
+
+.custom-toast-container {
+    width: 300px;
+    position: fixed;
+    top: 20px;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 1000;
+  
+}
+
+
+/* Updated CSS for login Popup and background Akshay*/
 .popup-background {
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.5); /* Adjust the background color and opacity */
+  background-color: rgba(
+    0,
+    0,
+    0,
+    0.5
+  ); /* Adjust the background color and opacity */
   display: flex;
   align-items: center;
   justify-content: center;
@@ -21,7 +45,7 @@
   /* Additional styles for your popup content */
 }
 
-input[type=file]::file-selector-button {
+input[type="file"]::file-selector-button {
   margin-right: 20px;
   border: none;
   background: #b03fcc;
@@ -29,9 +53,13 @@ input[type=file]::file-selector-button {
   border-radius: 10px;
   color: #fff;
   cursor: pointer;
-  transition: background .2s ease-in-out;
-} 
-
+  transition: background 0.2s ease-in-out;
+}
+.forgot_field {
+  display: flex;
+  align-items: center;
+  min-height: 100vh;
+}
 .commanMobHead .mobileHead p {
   font-size: 14px;
   line-height: 1.4em;
@@ -253,6 +281,15 @@ section.login_popup .wrapper400 {
   width: 100%;
   top: 20px;
   margin: 20px auto 0;
+}
+
+.loginOption figure.headerLogo{
+	position: relative;
+    z-index: 9;
+}
+.loginOption figure.headerLogo a{
+	background: #26353d;
+    padding-right: 20px;
 }
 
 @media (max-width: 1080px) {
