--- a/public/app/css/newStyle.css
+++ b/public/app/css/newStyle.css
@@ -19,31 +19,7 @@
 }
 
 
-/* Updated CSS for login Popup and background Akshay*/
-.popup-background {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(
-    0,
-    0,
-    0,
-    0.5
-  ); /* Adjust the background color and opacity */
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  z-index: 1000;
-}
 
-.popup {
-  background-color: #fff;
-  border: 1px solid #ccc;
-  padding: 20px;
-  /* Additional styles for your popup content */
-}
 
 input[type="file"]::file-selector-button {
   margin-right: 20px;
@@ -524,4 +500,30 @@ section.login_popup .wrapper400 {
 .new_login_popup.loginOption .alreadyAccount{
   display: flex;
   justify-content: center;
+}
+.new_login_popup .cross-icon{
+	cursor: pointer;
+}
+.new_login_popup .cross-icon img{
+	transition: all 0.25s ease;
+}
+.new_login_popup .cross-icon:hover img{
+	filter: brightness(0.1);
+}
+.mailInbox .loginBtn {
+    pointer-events: none;
+}
+header .userIcon .userNav {
+    bottom: auto;
+    top: 100%;
+}
+.rightSection .profile-img figure img{
+	border-radius: 50%;
+}
+
+.customNewPopups{
+	display: block;
+}
+.customNewPopups .popup-wrapper{
+	backdrop-filter: none;
 }
