--- a/public/app/css/newStyle.css
+++ b/public/app/css/newStyle.css
@@ -519,6 +519,9 @@ header .userIcon .userNav {
 }
 .rightSection .profile-img figure img{
 	border-radius: 50%;
+  height: 100%;
+    object-fit: cover;
+    
 }
 
 .customNewPopups{
