--- a/public/app/css/newStyle.css
+++ b/public/app/css/newStyle.css
@@ -530,3 +530,8 @@ header .userIcon .userNav {
 .customNewPopups .popup-wrapper{
 	backdrop-filter: none;
 }
+header .userIcon img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
