--- a/public/app/css/newStyle.css
+++ b/public/app/css/newStyle.css
@@ -986,3 +986,74 @@ section.mainWrapper.flex.hideMob {
     display: block;
   }
 }
+
+.video-slider .layer h5 {
+  padding-top: 30px;
+}
+.profile-banner figure {
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
+}
+.profile-banner figure img {
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
+  object-fit: cover;
+  object-position: top;
+}
+.rightSection .profile-img-box .cover-img-banner .banner-txt {
+  height: 100%;
+}
+.rightSection .profile-img-box .cover-img-banner .banner-txt .img-box figure {
+  position: absolute;
+  left: 0;
+  top: -4px;
+  width: 100% !important;
+  height: 100% !important;
+  border-radius: 12px;
+}
+.rightSection
+  .profile-img-box
+  .cover-img-banner
+  .banner-txt
+  .img-box
+  figure
+  img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 12px;
+}
+.customNewPopups .popup-wrapper {
+  top: 0;
+  transform: translate(-50%, 10px);
+}
+.interestSection ul {
+  height: 240px;
+  overflow-y: scroll;
+}
+.rightSection .keeps-container .blog-details .blog-txt ul li {
+  color: #cfd6db;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 25.6px;
+  margin-bottom: 12px;
+  list-style: inside;
+}
+.rightSection .setting-wrapper .setting-box .add-idea div {
+  flex-wrap: wrap;
+}
+.rightSection .setting-wrapper .setting-box .add-idea .file-preview {
+  padding: 5px;
+  width: 100px;
+  height: 100px;
+  border: solid 1px #cf1aff;
+  border-radius: 12px;
+  margin: 0 10px 10px;
+}
+.rightSection .setting-wrapper .setting-box .add-idea .file-preview img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
