--- a/public/app/css/newStyle.css
+++ b/public/app/css/newStyle.css
@@ -695,7 +695,8 @@ header .userIcon img {
   color: #cfd6db;
 }
 .video-slider .layer h5 {
-  padding-top: 15px;
+  padding-top: 20px;
+  margin: 60px 0 0px;
 }
 @media (max-width: 1200px) {
   .video-slider .layer h5 {
@@ -1030,7 +1031,7 @@ section.mainWrapper.flex.hideMob {
   transform: translate(-50%, 10px);
 }
 .interestSection ul {
-  height: 240px;
+  height: 170px;
   overflow-y: scroll;
 }
 .rightSection .keeps-container .blog-details .blog-txt ul li {
