--- a/public/app/css/style.css
+++ b/public/app/css/style.css
@@ -2026,12 +2026,15 @@ line-height: 1.45em;
   display: none;
 }
 }
-
+/* 
 .interestSection ul {
 margin-top: 65px;
 display: flex;
 flex-wrap: wrap;
 justify-content: center;
+} */
+.interestSection ul {
+  display: flex;
 }
 
 @media (max-width: 576px) {
@@ -5977,13 +5980,15 @@ color: #cfd6db;
 }
 
 .rightSection .keeps-container .interest-guru h5 {
-color: #f8fcff;
-font-weight: 600;
-font-size: 20px;
-line-height: 1.25em;
-font-family: PlusJakartaSansSemiBold;
-margin: 5px 0 12px;
-}
+  color: #f8fcff;
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 1.25em;
+  font-family: PlusJakartaSansSemiBold;
+  margin: 5px 0 12px;
+  cursor: default;
+  border: 2px solid transparent;
+} 
 
 .rightSection .keeps-container .interest-guru h5 a {
 color: #f8fcff;
