--- a/public/app/css/newStyle.css
+++ b/public/app/css/newStyle.css
@@ -989,8 +989,8 @@ section.mainWrapper.flex.hideMob {
 }
 
 .video-slider .layer h5 {
-  padding-top: 30px;
-}
+  padding-top: 0px;
+} 
 .profile-banner figure {
   width: 100%;
   height: 100%;
@@ -1076,7 +1076,7 @@ section.mainWrapper.flex.hideMob {
 .edit-profile {
   width: calc(100% - 280px);
 }
-.edit-profile .intrest-area .intrest-wrapper {
+/* .edit-profile .intrest-area .intrest-wrapper {
   margin-top: 16px;
   max-height: 190px;
   overflow: hidden;
@@ -1088,7 +1088,7 @@ section.mainWrapper.flex.hideMob {
 }
 .btn-wrap .loginBtn {
   max-width: 160px;
-}
+} */
 .interestSection.second ul.profileList .names {
   min-height: 40px;
 }
