Mornng issues done

--- a/public/app/css/newStyle.css
+++ b/public/app/css/newStyle.css
@@ -1112,8 +1112,9 @@ section.mainWrapper
   text-align: center;
 }
 .edit-profile .intrest-area .btn-wrap .loginBtn {
-  width: 150px;
+  width: 120px;
   margin-top: 10px;
+  padding: 12px;
 }
 .interestSection.second .followexperts li {
   background: rgba(198, 208, 225, 0.1);
@@ -1189,4 +1190,7 @@ background: #873dd0;
 .rightSection .keeps-container.featuredConatiner .gurukeeps-wrapper .connect-box li a {
   width: 48px;
   height: 48px;
+}
+.profileList.followexperts {
+  margin-top: 20px;
 }
