--- a/public/app/css/newStyle.css
+++ b/public/app/css/newStyle.css
@@ -489,6 +489,7 @@ section.login_popup .wrapper400 {
   padding: 70px 50px 40px;
   max-width: 500px;
   border-radius: 32px;
+  margin-top: 90px;
 }
 .new_login_popup.loginOption p {
   margin: 20px 0;
@@ -1215,4 +1216,7 @@ background: #873dd0;
   background: linear-gradient(91.54deg, #6591ff 0.79%, #ff2dcd 116.36%);
   border-radius: 38px;
   padding: 10px;
+}
+.rightSection .tab-content .about-content h2 {
+    padding: 23px 0;
 }
